# caridence

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.rocm  LICENSE  README.md  pyproject.toml
app/: server.py
app/templates/: dashboard.html  report.html
caridence/: aggregator.py  costs.py  estimator.py  ingest.py  metrics.py  pipeline.py  redact.py  report.py  schema.py
caridence/analyzer/: __init__.py  base.py  detector.py  hybrid.py  mock.py  qwen_http.py
caridence/bench/: cost.py  run_bench.py
caridence/data/: cardd.py  convert.py  eval_set.py  panels.py  severity.py  types.py
data/: bench.json
docs/: amd-benchmark.md  detector-results.md  training-on-amd-rocm.md
docs/demo/: demo-script.md
docs/superpowers/plans/: 2026-06-24-caridence-core-pipeline.md  2026-06-24-caridence-training-benchmark.md
landing/functions/: _middleware.js
landing/public/: index.html
scripts/: bench_amd.py  bench_local.py  build_realdomain_van.py  gen_demo_frames.py  gen_demo_verified.py  serve_vllm.sh  train_yolo.sh  tts_render.py  tts_samples.py  yolo_eval.py
tests/: conftest.py  test_aggregator.py  test_analyzer_mock.py  test_cardd.py  test_convert.py  test_cost.py  test_detector.py  test_estimator.py  test_eval_set.py  test_hybrid.py  test_ingest.py  test_metrics.py  test_panels.py  test_pipeline.py  test_prepare_data.py  test_qwen_http.py  test_redact.py  test_report.py  test_run_bench.py  test_schema.py  test_server.py  test_severity.py
train/: merge_adapter.py  prepare_data.py  train_lora.py
(+1 files in other folders)
