[project]
name = "caridence"
version = "0.1.0"
description = "Vehicle-damage walkaround inspector with cited evidence frames"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "jinja2>=3.1",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "openai>=1.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["caridence*", "app*"]
